# woolooloo-os

./: README.md
woolooloo_ai_os/: .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  dev.sh  docker-compose.yml  pyproject.toml
woolooloo_ai_os/docs/: architecture.md
woolooloo_ai_os/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  deploy_ssh.py  docker-compose.yml  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
woolooloo_ai_os/frontend/src/: middleware.ts
woolooloo_ai_os/frontend/src/app/: globals.css  layout.tsx  page.tsx
woolooloo_ai_os/frontend/src/components/: agent-card.tsx  agent-dispatch-modal.tsx  agent-prompt-modal.tsx  auth-provider.tsx  command-interface.tsx  date-range-picker.tsx  export-button.tsx  logs-viewer.tsx  navbar.tsx  new-client-modal.tsx  new-task-modal.tsx  page-header.tsx  project-tabs.tsx  providers.tsx  recent-activity.tsx  revenue-chart.tsx  stat-card.tsx  status-card.tsx  task-detail.tsx  theme-provider.tsx  theme-toggle.tsx  (+1 more)
woolooloo_ai_os/prisma/: schema.prisma
woolooloo_ai_os/src/: config.py  main.py
woolooloo_ai_os/src/agents/: __init__.py  base.py  dev.py  founder.py  growth.py  ops.py  product.py  sales.py
woolooloo_ai_os/src/api/: agents.py  commands.py  status.py  webhooks.py
woolooloo_ai_os/src/integrations/: linear.py  notion.py  slack.py  whatsapp.py  xero.py
woolooloo_ai_os/src/llm/: client.py
woolooloo_ai_os/src/models/: __init__.py  agents.py  events.py
woolooloo_ai_os/src/opencode/: client.py
woolooloo_ai_os/src/workers/: celery_app.py  tasks.py
(+145 files in other folders)
